finished NNE ensemble and added FCN (+ensemble)

--- a/notebooks/EnsembleEvaluation.ipynb
+++ b/notebooks/EnsembleEvaluation.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 37,
    "outputs": [],
    "source": [
     "dataset_names = [dataset.value for dataset in CurrentDatasets]\n",
@@ -39,21 +39,21 @@
     "# eg [foo, [bar, bar, bar, [baz, baz]]] is weighted [1/2, [1/8, 1/8, 1/8, [1/16, 1/16]]]\n",
     "\n",
     "ensembles = {\"All\": [[f\"MLP-{number}\" for number in range(0,10)],\n",
-    "                     #[f\"FCN-{number}\" for number in range(0,10)],\n",
+    "                     [f\"FCN-{number}\" for number in range(0,10)],\n",
     "                     #[f\"MCDCNN-{number}\" for number in range(0,10)],\n",
     "                     #[f\"Time-CNN-{number}\" for number in range(0,10)],\n",
     "                     [f\"Encoder-{number}\" for number in range(0,10)],\n",
     "                     [f\"Resnet-{number}\" for number in range(0,10)]],\n",
     "             \"MLP10\": [f\"MLP-{number}\" for number in range(0,10)],\n",
-    "             #\"FCN10\": [f\"FCN-{number}\" for number in range(0,10)],\n",
+    "             \"FCN10\": [f\"FCN-{number}\" for number in range(0,10)],\n",
     "             #\"MCDCNN10\": [f\"MCDCNN-{number}\" for number in range(0,10)],\n",
     "             #\"Time-CNN10\": [f\"Time-CNN-{number}\" for number in range(0,10)],\n",
     "             \"Encoder10\": [f\"Encoder-{number}\" for number in range(0,10)],\n",
     "             \"Resnet10\": [f\"Resnet-{number}\" for number in range(0,10)],\n",
     "             \"NNE\": [[f\"Resnet-{number}\" for number in range(0,10)],\n",
-    "                     #[f\"FCN-{number}\" for number in range(0,10)],\n",
+    "                     [f\"FCN-{number}\" for number in range(0,10)],\n",
     "                     [f\"Encoder-{number}\" for number in range(0,10)]]}\n",
-    "csv_name = '../results/test_NNE.csv'"
+    "csv_name = '../results/test_FCN10.csv'"
    ],
    "metadata": {
     "collapsed": false
@@ -61,20 +61,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 38,
    "outputs": [
     {
      "data": {
-      "text/plain": "{'NNE': [['Resnet-0',\n   'Resnet-1',\n   'Resnet-2',\n   'Resnet-3',\n   'Resnet-4',\n   'Resnet-5',\n   'Resnet-6',\n   'Resnet-7',\n   'Resnet-8',\n   'Resnet-9'],\n  ['Encoder-0',\n   'Encoder-1',\n   'Encoder-2',\n   'Encoder-3',\n   'Encoder-4',\n   'Encoder-5',\n   'Encoder-6',\n   'Encoder-7',\n   'Encoder-8',\n   'Encoder-9']]}"
+      "text/plain": "{'FCN10': ['FCN-0',\n  'FCN-1',\n  'FCN-2',\n  'FCN-3',\n  'FCN-4',\n  'FCN-5',\n  'FCN-6',\n  'FCN-7',\n  'FCN-8',\n  'FCN-9']}"
      },
-     "execution_count": 27,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "used_ensembles=ensembles\n",
-    "used_ensembles=keyfilter(lambda ensemble: ensemble in [\"NNE\"], ensembles)\n",
+    "used_ensembles=keyfilter(lambda ensemble: ensemble in [\"FCN10\"], ensembles)\n",
     "used_ensembles"
    ],
    "metadata": {
@@ -83,193 +83,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "1/11:\tcricket_y\n",
-      "('Resnet-0', 'Resnet-1', 'Resnet-2', 'Resnet-3', 'Resnet-4', 'Resnet-5', 'Resnet-6', 'Resnet-7', 'Resnet-8', 'Resnet-9', 'Encoder-0', 'Encoder-1', 'Encoder-2', 'Encoder-3', 'Encoder-4', 'Encoder-5', 'Encoder-6', 'Encoder-7', 'Encoder-8', 'Encoder-9')\n",
-      "(0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/felix/miniconda3/envs/tf/lib/python3.10/site-packages/keras/layers/core/lambda_layer.py:324: UserWarning: ModelBuilder is not loaded, but a Lambda layer uses it. It may cause errors.\n",
-      "  function = cls._parse_function_from_config(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "('FCN-0', 'FCN-1', 'FCN-2', 'FCN-3', 'FCN-4', 'FCN-5', 'FCN-6', 'FCN-7', 'FCN-8', 'FCN-9')\n",
+      "(0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1)\n",
       "2/11:\tdistal_phalanax_tw\n",
-      "('Resnet-0', 'Resnet-1', 'Resnet-2', 'Resnet-3', 'Resnet-4', 'Resnet-5', 'Resnet-6', 'Resnet-7', 'Resnet-8', 'Resnet-9', 'Encoder-0', 'Encoder-1', 'Encoder-2', 'Encoder-3', 'Encoder-4', 'Encoder-5', 'Encoder-6', 'Encoder-7', 'Encoder-8', 'Encoder-9')\n",
-      "(0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/felix/miniconda3/envs/tf/lib/python3.10/site-packages/keras/layers/core/lambda_layer.py:324: UserWarning: ModelBuilder is not loaded, but a Lambda layer uses it. It may cause errors.\n",
-      "  function = cls._parse_function_from_config(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "('FCN-0', 'FCN-1', 'FCN-2', 'FCN-3', 'FCN-4', 'FCN-5', 'FCN-6', 'FCN-7', 'FCN-8', 'FCN-9')\n",
+      "(0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1)\n",
       "3/11:\tegg_five_days\n",
-      "('Resnet-0', 'Resnet-1', 'Resnet-2', 'Resnet-3', 'Resnet-4', 'Resnet-5', 'Resnet-6', 'Resnet-7', 'Resnet-8', 'Resnet-9', 'Encoder-0', 'Encoder-1', 'Encoder-2', 'Encoder-3', 'Encoder-4', 'Encoder-5', 'Encoder-6', 'Encoder-7', 'Encoder-8', 'Encoder-9')\n",
-      "(0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/felix/miniconda3/envs/tf/lib/python3.10/site-packages/keras/layers/core/lambda_layer.py:324: UserWarning: ModelBuilder is not loaded, but a Lambda layer uses it. It may cause errors.\n",
-      "  function = cls._parse_function_from_config(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "('FCN-0', 'FCN-1', 'FCN-2', 'FCN-3', 'FCN-4', 'FCN-5', 'FCN-6', 'FCN-7', 'FCN-8', 'FCN-9')\n",
+      "(0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1)\n",
       "4/11:\telectric_devices\n",
-      "('Resnet-0', 'Resnet-1', 'Resnet-2', 'Resnet-3', 'Resnet-4', 'Resnet-5', 'Resnet-6', 'Resnet-7', 'Resnet-8', 'Resnet-9', 'Encoder-0', 'Encoder-1', 'Encoder-2', 'Encoder-3', 'Encoder-4', 'Encoder-5', 'Encoder-6', 'Encoder-7', 'Encoder-8', 'Encoder-9')\n",
-      "(0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/felix/miniconda3/envs/tf/lib/python3.10/site-packages/keras/layers/core/lambda_layer.py:324: UserWarning: ModelBuilder is not loaded, but a Lambda layer uses it. It may cause errors.\n",
-      "  function = cls._parse_function_from_config(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "('FCN-0', 'FCN-1', 'FCN-2', 'FCN-3', 'FCN-4', 'FCN-5', 'FCN-6', 'FCN-7', 'FCN-8', 'FCN-9')\n",
+      "(0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1)\n",
       "5/11:\tface_ucr\n",
-      "('Resnet-0', 'Resnet-1', 'Resnet-2', 'Resnet-3', 'Resnet-4', 'Resnet-5', 'Resnet-6', 'Resnet-7', 'Resnet-8', 'Resnet-9', 'Encoder-0', 'Encoder-1', 'Encoder-2', 'Encoder-3', 'Encoder-4', 'Encoder-5', 'Encoder-6', 'Encoder-7', 'Encoder-8', 'Encoder-9')\n",
-      "(0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/felix/miniconda3/envs/tf/lib/python3.10/site-packages/keras/layers/core/lambda_layer.py:324: UserWarning: ModelBuilder is not loaded, but a Lambda layer uses it. It may cause errors.\n",
-      "  function = cls._parse_function_from_config(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "('FCN-0', 'FCN-1', 'FCN-2', 'FCN-3', 'FCN-4', 'FCN-5', 'FCN-6', 'FCN-7', 'FCN-8', 'FCN-9')\n",
+      "(0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1)\n",
       "6/11:\tfifty_words\n",
-      "('Resnet-0', 'Resnet-1', 'Resnet-2', 'Resnet-3', 'Resnet-4', 'Resnet-5', 'Resnet-6', 'Resnet-7', 'Resnet-8', 'Resnet-9', 'Encoder-0', 'Encoder-1', 'Encoder-2', 'Encoder-3', 'Encoder-4', 'Encoder-5', 'Encoder-6', 'Encoder-7', 'Encoder-8', 'Encoder-9')\n",
-      "(0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/felix/miniconda3/envs/tf/lib/python3.10/site-packages/keras/layers/core/lambda_layer.py:324: UserWarning: ModelBuilder is not loaded, but a Lambda layer uses it. It may cause errors.\n",
-      "  function = cls._parse_function_from_config(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "('FCN-0', 'FCN-1', 'FCN-2', 'FCN-3', 'FCN-4', 'FCN-5', 'FCN-6', 'FCN-7', 'FCN-8', 'FCN-9')\n",
+      "(0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1)\n",
       "7/11:\tmote_strain\n",
-      "('Resnet-0', 'Resnet-1', 'Resnet-2', 'Resnet-3', 'Resnet-4', 'Resnet-5', 'Resnet-6', 'Resnet-7', 'Resnet-8', 'Resnet-9', 'Encoder-0', 'Encoder-1', 'Encoder-2', 'Encoder-3', 'Encoder-4', 'Encoder-5', 'Encoder-6', 'Encoder-7', 'Encoder-8', 'Encoder-9')\n",
-      "(0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/felix/miniconda3/envs/tf/lib/python3.10/site-packages/keras/layers/core/lambda_layer.py:324: UserWarning: ModelBuilder is not loaded, but a Lambda layer uses it. It may cause errors.\n",
-      "  function = cls._parse_function_from_config(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "('FCN-0', 'FCN-1', 'FCN-2', 'FCN-3', 'FCN-4', 'FCN-5', 'FCN-6', 'FCN-7', 'FCN-8', 'FCN-9')\n",
+      "(0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1)\n",
       "8/11:\tpower_cons\n",
-      "('Resnet-0', 'Resnet-1', 'Resnet-2', 'Resnet-3', 'Resnet-4', 'Resnet-5', 'Resnet-6', 'Resnet-7', 'Resnet-8', 'Resnet-9', 'Encoder-0', 'Encoder-1', 'Encoder-2', 'Encoder-3', 'Encoder-4', 'Encoder-5', 'Encoder-6', 'Encoder-7', 'Encoder-8', 'Encoder-9')\n",
-      "(0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/felix/miniconda3/envs/tf/lib/python3.10/site-packages/keras/layers/core/lambda_layer.py:324: UserWarning: ModelBuilder is not loaded, but a Lambda layer uses it. It may cause errors.\n",
-      "  function = cls._parse_function_from_config(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "('FCN-0', 'FCN-1', 'FCN-2', 'FCN-3', 'FCN-4', 'FCN-5', 'FCN-6', 'FCN-7', 'FCN-8', 'FCN-9')\n",
+      "(0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1)\n",
       "9/11:\tsony_robot\n",
-      "('Resnet-0', 'Resnet-1', 'Resnet-2', 'Resnet-3', 'Resnet-4', 'Resnet-5', 'Resnet-6', 'Resnet-7', 'Resnet-8', 'Resnet-9', 'Encoder-0', 'Encoder-1', 'Encoder-2', 'Encoder-3', 'Encoder-4', 'Encoder-5', 'Encoder-6', 'Encoder-7', 'Encoder-8', 'Encoder-9')\n",
-      "(0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/felix/miniconda3/envs/tf/lib/python3.10/site-packages/keras/layers/core/lambda_layer.py:324: UserWarning: ModelBuilder is not loaded, but a Lambda layer uses it. It may cause errors.\n",
-      "  function = cls._parse_function_from_config(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "('FCN-0', 'FCN-1', 'FCN-2', 'FCN-3', 'FCN-4', 'FCN-5', 'FCN-6', 'FCN-7', 'FCN-8', 'FCN-9')\n",
+      "(0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1)\n",
       "10/11:\tswedish_leaf\n",
-      "('Resnet-0', 'Resnet-1', 'Resnet-2', 'Resnet-3', 'Resnet-4', 'Resnet-5', 'Resnet-6', 'Resnet-7', 'Resnet-8', 'Resnet-9', 'Encoder-0', 'Encoder-1', 'Encoder-2', 'Encoder-3', 'Encoder-4', 'Encoder-5', 'Encoder-6', 'Encoder-7', 'Encoder-8', 'Encoder-9')\n",
-      "(0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/felix/miniconda3/envs/tf/lib/python3.10/site-packages/keras/layers/core/lambda_layer.py:324: UserWarning: ModelBuilder is not loaded, but a Lambda layer uses it. It may cause errors.\n",
-      "  function = cls._parse_function_from_config(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "('FCN-0', 'FCN-1', 'FCN-2', 'FCN-3', 'FCN-4', 'FCN-5', 'FCN-6', 'FCN-7', 'FCN-8', 'FCN-9')\n",
+      "(0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1)\n",
       "11/11:\tsynthetic_control\n",
-      "('Resnet-0', 'Resnet-1', 'Resnet-2', 'Resnet-3', 'Resnet-4', 'Resnet-5', 'Resnet-6', 'Resnet-7', 'Resnet-8', 'Resnet-9', 'Encoder-0', 'Encoder-1', 'Encoder-2', 'Encoder-3', 'Encoder-4', 'Encoder-5', 'Encoder-6', 'Encoder-7', 'Encoder-8', 'Encoder-9')\n",
-      "(0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/felix/miniconda3/envs/tf/lib/python3.10/site-packages/keras/layers/core/lambda_layer.py:324: UserWarning: ModelBuilder is not loaded, but a Lambda layer uses it. It may cause errors.\n",
-      "  function = cls._parse_function_from_config(\n"
+      "('FCN-0', 'FCN-1', 'FCN-2', 'FCN-3', 'FCN-4', 'FCN-5', 'FCN-6', 'FCN-7', 'FCN-8', 'FCN-9')\n",
+      "(0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1)\n"
      ]
     }
    ],
@@ -277,24 +129,36 @@
     "run_ensembles(dataset_names=dataset_names, ensembles=used_ensembles, verbose=True).to_csv(csv_name)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 40,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cricket_y\n",
+      "distal_phalanax_tw\n",
+      "egg_five_days\n",
+      "electric_devices\n",
+      "face_ucr\n",
+      "fifty_words\n",
+      "mote_strain\n",
+      "power_cons\n",
+      "sony_robot\n",
+      "swedish_leaf\n",
+      "synthetic_control\n"
+     ]
+    }
+   ],
    "source": [
     "create_confusion_matrix_plot_from_csv(csv_name, verbose=True)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": false
    }
   },
   {
