--- a/notebooks/EnsembleWithConfidenceEvaluation.ipynb
+++ b/notebooks/EnsembleWithConfidenceEvaluation.ipynb
@@ -2,14 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'tensorflow_addons'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 16\u001b[0m\n\u001b[1;32m     12\u001b[0m sys\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../src\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtoolz\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m keyfilter\n\u001b[0;32m---> 16\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mEvaluation\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m run_ensembles, load_models\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mLoadData\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m CurrentDatasets\n\u001b[1;32m     18\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mHelpers\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m create_confusion_matrix_plot_from_csv\n",
+      "File \u001b[0;32m/pfs/data5/home/ul/ul_student/ul_dgb62/project deep learning/EnsembleBasedTSC/src/Evaluation.py:7\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mitertools\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m combinations\n\u001b[0;32m----> 7\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtensorflow_addons\u001b[39;00m  \u001b[38;5;66;03m# needed for model import, do not remove\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mkeras\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcallbacks\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m LambdaCallback\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'tensorflow_addons'"
+     ]
+    }
+   ],
    "source": [
     "import logging\n",
     "import os\n",
@@ -33,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -62,52 +72,22 @@
     "             \"NNE\": [[f\"Resnet-{number}\" for number in range(0,10)],\n",
     "                     #[f\"FCN-{number}\" for number in range(0,10)],\n",
     "                     [f\"Encoder-{number}\" for number in range(0,10)]]}\n",
-    "csv_name = '../results/test_NNE.csv'"
+    "csv_name = '../results/without_augmentation/ensembles_with_confidence.csv'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'NNE': [['Resnet-0',\n",
-       "   'Resnet-1',\n",
-       "   'Resnet-2',\n",
-       "   'Resnet-3',\n",
-       "   'Resnet-4',\n",
-       "   'Resnet-5',\n",
-       "   'Resnet-6',\n",
-       "   'Resnet-7',\n",
-       "   'Resnet-8',\n",
-       "   'Resnet-9'],\n",
-       "  ['Encoder-0',\n",
-       "   'Encoder-1',\n",
-       "   'Encoder-2',\n",
-       "   'Encoder-3',\n",
-       "   'Encoder-4',\n",
-       "   'Encoder-5',\n",
-       "   'Encoder-6',\n",
-       "   'Encoder-7',\n",
-       "   'Encoder-8',\n",
-       "   'Encoder-9']]}"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "used_ensembles=ensembles\n",
-    "used_ensembles=keyfilter(lambda ensemble: ensemble in [\"NNE\"], ensembles)\n",
+    "#used_ensembles=keyfilter(lambda ensemble: ensemble in [\"NNE\"], ensembles)\n",
     "used_ensembles"
    ]
   },
