adapt notebook to changes

--- a/notebooks/EnsembleEvaluation.ipynb
+++ b/notebooks/EnsembleEvaluation.ipynb
@@ -26,9 +26,9 @@
     "\n",
     "from toolz import keyfilter\n",
     "\n",
-    "from Evaluation import run_ensembles, load_models\n",
     "from LoadData import CurrentDatasets\n",
-    "from Helpers import create_confusion_matrix_plot_from_csv"
+    "from Evaluation import create_confusion_matrix_plot_from_csv\n",
+    "from EnsembleBuilder import EnsembleBuilder"
    ]
   },
   {
@@ -313,7 +313,12 @@
     }
    ],
    "source": [
-    "run_ensembles(dataset_names=dataset_names, ensembles=used_ensembles, verbose=True).to_csv(csv_name)"
+    "ens_builder = EnsembleBuilder(dataset_names=dataset_names, \n",
+    "                              ensembles=used_ensembles, \n",
+    "                              verbose=True, \n",
+    "                              models_path=model_paths, \n",
+    "                              datasets_path=datasets_path)\n",
+    "ens_builder.run_ensembles().to_csv(csv_name)"
    ]
   },
   {
