--- a/notebooks/EnsembleEvaluation.ipynb
+++ b/notebooks/EnsembleEvaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -33,41 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "dataset_names = [dataset.value for dataset in CurrentDatasets]\n",
-    "\n",
-    "# in a nested list all elements on the same level get equal weights\n",
-    "# eg [foo, [bar, bar, bar, [baz, baz]]] is weighted [1/2, [1/8, 1/8, 1/8, [1/16, 1/16]]]\n",
-    "\n",
-    "ensembles = {\"All\": [[f\"MLP-{number}\" for number in range(0,10)],\n",
-    "                     [f\"FCN-{number}\" for number in range(0,10)],\n",
-    "                     #[f\"MCDCNN-{number}\" for number in range(0,10)],\n",
-    "                     #[f\"Time-CNN-{number}\" for number in range(0,10)],\n",
-    "                     [f\"Encoder-{number}\" for number in range(0,10)],\n",
-    "                     [f\"Resnet-{number}\" for number in range(0,10)]],\n",
-    "             \"MLP10\": [f\"MLP-{number}\" for number in range(0,10)],\n",
-    "             \"FCN10\": [f\"FCN-{number}\" for number in range(0,10)],\n",
-    "             #\"MCDCNN10\": [f\"MCDCNN-{number}\" for number in range(0,10)],\n",
-    "             #\"Time-CNN10\": [f\"Time-CNN-{number}\" for number in range(0,10)],\n",
-    "             \"Encoder10\": [f\"Encoder-{number}\" for number in range(0,10)],\n",
-    "             \"Resnet10\": [f\"Resnet-{number}\" for number in range(0,10)],\n",
-    "             \"NNE\": [[f\"Resnet-{number}\" for number in range(0,10)],\n",
-    "                     [f\"FCN-{number}\" for number in range(0,10)],\n",
-    "                     [f\"Encoder-{number}\" for number in range(0,10)]]}\n",
-    "csv_name = '../results/test_FCN10.csv'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -77,37 +43,74 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "{'FCN10': ['FCN-0',\n",
-       "  'FCN-1',\n",
-       "  'FCN-2',\n",
-       "  'FCN-3',\n",
-       "  'FCN-4',\n",
-       "  'FCN-5',\n",
-       "  'FCN-6',\n",
-       "  'FCN-7',\n",
-       "  'FCN-8',\n",
-       "  'FCN-9']}"
-      ]
+      "text/plain": "['cricket_y',\n 'distal_phalanax_tw',\n 'egg_five_days',\n 'face_ucr',\n 'fifty_words',\n 'mote_strain',\n 'power_cons',\n 'sony_robot',\n 'synthetic_control']"
      },
-     "execution_count": 38,
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset_names = [dataset.value for dataset in CurrentDatasets]\n",
+    "\n",
+    "# in a nested list all elements on the same level get equal weights\n",
+    "# eg [foo, [bar, bar, bar, [baz, baz]]] is weighted [1/2, [1/8, 1/8, 1/8, [1/16, 1/16]]]\n",
+    "\n",
+    "ensembles = {\"All\": [[f\"MLP-{number}\" for number in range(0,10)],\n",
+    "                     [f\"FCN-{number}\" for number in range(0,10)],\n",
+    "                     [f\"MCDCNN-{number}\" for number in range(0,10)],\n",
+    "                     #[f\"Time-CNN-{number}\" for number in range(0,10)],\n",
+    "                     [f\"Encoder-{number}\" for number in range(0,10)],\n",
+    "                     [f\"Resnet-{number}\" for number in range(0,10)]],\n",
+    "             \"MLP10\": [f\"MLP-{number}\" for number in range(0,10)],\n",
+    "             \"FCN10\": [f\"FCN-{number}\" for number in range(0,10)],\n",
+    "             \"MCDCNN10\": [f\"MCDCNN-{number}\" for number in range(0,10)],\n",
+    "             #\"Time-CNN10\": [f\"Time-CNN-{number}\" for number in range(0,10)],\n",
+    "             \"Encoder10\": [f\"Encoder-{number}\" for number in range(0,10)],\n",
+    "             \"Resnet10\": [f\"Resnet-{number}\" for number in range(0,10)],\n",
+    "             \"NNE\": [[f\"Resnet-{number}\" for number in range(0,10)],\n",
+    "                     [f\"FCN-{number}\" for number in range(0,10)],\n",
+    "                     [f\"Encoder-{number}\" for number in range(0,10)]]}\n",
+    "csv_name = '../results/all_ensembles_augmented.csv'\n",
+    "dataset_names = list(filter(lambda n: n not in ['electric_devices', 'swedish_leaf'], dataset_names)) # remove electric devices\n",
+    "dataset_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'All': [['MLP-0',\n   'MLP-1',\n   'MLP-2',\n   'MLP-3',\n   'MLP-4',\n   'MLP-5',\n   'MLP-6',\n   'MLP-7',\n   'MLP-8',\n   'MLP-9'],\n  ['FCN-0',\n   'FCN-1',\n   'FCN-2',\n   'FCN-3',\n   'FCN-4',\n   'FCN-5',\n   'FCN-6',\n   'FCN-7',\n   'FCN-8',\n   'FCN-9'],\n  ['MCDCNN-0',\n   'MCDCNN-1',\n   'MCDCNN-2',\n   'MCDCNN-3',\n   'MCDCNN-4',\n   'MCDCNN-5',\n   'MCDCNN-6',\n   'MCDCNN-7',\n   'MCDCNN-8',\n   'MCDCNN-9'],\n  ['Encoder-0',\n   'Encoder-1',\n   'Encoder-2',\n   'Encoder-3',\n   'Encoder-4',\n   'Encoder-5',\n   'Encoder-6',\n   'Encoder-7',\n   'Encoder-8',\n   'Encoder-9'],\n  ['Resnet-0',\n   'Resnet-1',\n   'Resnet-2',\n   'Resnet-3',\n   'Resnet-4',\n   'Resnet-5',\n   'Resnet-6',\n   'Resnet-7',\n   'Resnet-8',\n   'Resnet-9']],\n 'MLP10': ['MLP-0',\n  'MLP-1',\n  'MLP-2',\n  'MLP-3',\n  'MLP-4',\n  'MLP-5',\n  'MLP-6',\n  'MLP-7',\n  'MLP-8',\n  'MLP-9'],\n 'FCN10': ['FCN-0',\n  'FCN-1',\n  'FCN-2',\n  'FCN-3',\n  'FCN-4',\n  'FCN-5',\n  'FCN-6',\n  'FCN-7',\n  'FCN-8',\n  'FCN-9'],\n 'MCDCNN10': ['MCDCNN-0',\n  'MCDCNN-1',\n  'MCDCNN-2',\n  'MCDCNN-3',\n  'MCDCNN-4',\n  'MCDCNN-5',\n  'MCDCNN-6',\n  'MCDCNN-7',\n  'MCDCNN-8',\n  'MCDCNN-9'],\n 'Encoder10': ['Encoder-0',\n  'Encoder-1',\n  'Encoder-2',\n  'Encoder-3',\n  'Encoder-4',\n  'Encoder-5',\n  'Encoder-6',\n  'Encoder-7',\n  'Encoder-8',\n  'Encoder-9'],\n 'Resnet10': ['Resnet-0',\n  'Resnet-1',\n  'Resnet-2',\n  'Resnet-3',\n  'Resnet-4',\n  'Resnet-5',\n  'Resnet-6',\n  'Resnet-7',\n  'Resnet-8',\n  'Resnet-9'],\n 'NNE': [['Resnet-0',\n   'Resnet-1',\n   'Resnet-2',\n   'Resnet-3',\n   'Resnet-4',\n   'Resnet-5',\n   'Resnet-6',\n   'Resnet-7',\n   'Resnet-8',\n   'Resnet-9'],\n  ['FCN-0',\n   'FCN-1',\n   'FCN-2',\n   'FCN-3',\n   'FCN-4',\n   'FCN-5',\n   'FCN-6',\n   'FCN-7',\n   'FCN-8',\n   'FCN-9'],\n  ['Encoder-0',\n   'Encoder-1',\n   'Encoder-2',\n   'Encoder-3',\n   'Encoder-4',\n   'Encoder-5',\n   'Encoder-6',\n   'Encoder-7',\n   'Encoder-8',\n   'Encoder-9']]}"
+     },
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "used_ensembles=ensembles\n",
-    "used_ensembles=keyfilter(lambda ensemble: ensemble in [\"FCN10\"], ensembles)\n",
+    "#used_ensembles=keyfilter(lambda ensemble: ensemble in [\"MLP10\"], ensembles)\n",
     "used_ensembles"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
+    },
+    "pycharm": {
+     "is_executing": true
     }
    },
    "outputs": [
@@ -115,112 +118,52 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/11:\tcricket_y\n",
-      "('FCN-0', 'FCN-1', 'FCN-2', 'FCN-3', 'FCN-4', 'FCN-5', 'FCN-6', 'FCN-7', 'FCN-8', 'FCN-9')\n",
-      "(0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1)\n",
-      "2/11:\tdistal_phalanax_tw\n",
-      "('FCN-0', 'FCN-1', 'FCN-2', 'FCN-3', 'FCN-4', 'FCN-5', 'FCN-6', 'FCN-7', 'FCN-8', 'FCN-9')\n",
-      "(0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1)\n",
-      "3/11:\tegg_five_days\n",
-      "('FCN-0', 'FCN-1', 'FCN-2', 'FCN-3', 'FCN-4', 'FCN-5', 'FCN-6', 'FCN-7', 'FCN-8', 'FCN-9')\n",
-      "(0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1)\n",
-      "4/11:\telectric_devices\n",
-      "('FCN-0', 'FCN-1', 'FCN-2', 'FCN-3', 'FCN-4', 'FCN-5', 'FCN-6', 'FCN-7', 'FCN-8', 'FCN-9')\n",
-      "(0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1)\n",
-      "5/11:\tface_ucr\n",
-      "('FCN-0', 'FCN-1', 'FCN-2', 'FCN-3', 'FCN-4', 'FCN-5', 'FCN-6', 'FCN-7', 'FCN-8', 'FCN-9')\n",
-      "(0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1)\n",
-      "6/11:\tfifty_words\n",
-      "('FCN-0', 'FCN-1', 'FCN-2', 'FCN-3', 'FCN-4', 'FCN-5', 'FCN-6', 'FCN-7', 'FCN-8', 'FCN-9')\n",
-      "(0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1)\n",
-      "7/11:\tmote_strain\n",
-      "('FCN-0', 'FCN-1', 'FCN-2', 'FCN-3', 'FCN-4', 'FCN-5', 'FCN-6', 'FCN-7', 'FCN-8', 'FCN-9')\n",
-      "(0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1)\n",
-      "8/11:\tpower_cons\n",
-      "('FCN-0', 'FCN-1', 'FCN-2', 'FCN-3', 'FCN-4', 'FCN-5', 'FCN-6', 'FCN-7', 'FCN-8', 'FCN-9')\n",
-      "(0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1)\n",
-      "9/11:\tsony_robot\n",
-      "('FCN-0', 'FCN-1', 'FCN-2', 'FCN-3', 'FCN-4', 'FCN-5', 'FCN-6', 'FCN-7', 'FCN-8', 'FCN-9')\n",
-      "(0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1)\n",
-      "10/11:\tswedish_leaf\n",
-      "('FCN-0', 'FCN-1', 'FCN-2', 'FCN-3', 'FCN-4', 'FCN-5', 'FCN-6', 'FCN-7', 'FCN-8', 'FCN-9')\n",
-      "(0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1)\n",
-      "11/11:\tsynthetic_control\n",
-      "('FCN-0', 'FCN-1', 'FCN-2', 'FCN-3', 'FCN-4', 'FCN-5', 'FCN-6', 'FCN-7', 'FCN-8', 'FCN-9')\n",
-      "(0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1)\n"
+      "1/9:\tcricket_y\n",
+      "\tAll\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/felix/miniconda3/envs/tf/lib/python3.10/site-packages/keras/layers/core/lambda_layer.py:324: UserWarning: ModelBuilder is not loaded, but a Lambda layer uses it. It may cause errors.\n",
+      "  function = cls._parse_function_from_config(\n"
      ]
     }
    ],
    "source": [
     "ens_builder = EnsembleBuilder(dataset_names=dataset_names, \n",
     "                              ensembles=used_ensembles, \n",
-    "                              verbose=True, \n",
-    "                              models_path=\"../models\", \n",
-    "                              datasets_path=\"../datasets\")\n",
-    "ens_builder.run_ensembles(augmentation=False).to_csv(csv_name)\n",
-    "create_confusion_matrix_plot_from_csv(csv_name, verbose=True)"
+    "                              verbose=True,\n",
+    "                              models_path=\"../models/augmented/\",\n",
+    "                              datasets_path=\"../datasets/\")\n",
+    "ens_builder.run_ensembles(augmentation=False).to_csv(csv_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cricket_y\n",
-      "distal_phalanax_tw\n",
-      "egg_five_days\n",
-      "electric_devices\n",
-      "face_ucr\n",
-      "fifty_words\n",
-      "mote_strain\n",
-      "power_cons\n",
-      "sony_robot\n",
-      "swedish_leaf\n",
-      "synthetic_control\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "create_confusion_matrix_plot_from_csv(csv_name, verbose=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cricket_y\n",
-      "distal_phalanax_tw\n",
-      "egg_five_days\n",
-      "electric_devices\n",
-      "face_ucr\n",
-      "fifty_words\n",
-      "mote_strain\n",
-      "power_cons\n",
-      "sony_robot\n",
-      "swedish_leaf\n",
-      "synthetic_control\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "create_confusion_matrix_plot_from_csv(\"../results/train__Encoder_Encoder_Encoder_Encoder_Encoder_Encoder_Encoder_Encoder_Encoder_Encoder_11_datasets.csv\", verbose=True)"
    ]
