--- a/notebooks/EnsembleEvaluation.ipynb
+++ b/notebooks/EnsembleEvaluation.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -45,7 +45,7 @@
      "data": {
       "text/plain": "['cricket_y',\n 'distal_phalanax_tw',\n 'egg_five_days',\n 'face_ucr',\n 'fifty_words',\n 'mote_strain',\n 'power_cons',\n 'sony_robot',\n 'synthetic_control']"
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,15 +70,18 @@
     "             \"Resnet10\": [f\"Resnet-{number}\" for number in range(0,10)],\n",
     "             \"NNE\": [[f\"Resnet-{number}\" for number in range(0,10)],\n",
     "                     [f\"FCN-{number}\" for number in range(0,10)],\n",
+    "                     [f\"Encoder-{number}\" for number in range(0,10)]],\n",
+    "             \"Best3\": [[f\"Resnet-{number}\" for number in range(0,10)],\n",
+    "                     [f\"MLP-{number}\" for number in range(0,10)],\n",
     "                     [f\"Encoder-{number}\" for number in range(0,10)]]}\n",
-    "csv_name = '../results/all_ensembles_augmented.csv'\n",
+    "csv_name = '../results/ensemble_best_3_with_augmentation.csv'\n",
     "dataset_names = list(filter(lambda n: n not in ['electric_devices', 'swedish_leaf'], dataset_names)) # remove electric devices\n",
     "dataset_names"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -88,29 +91,26 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "{'All': [['MLP-0',\n   'MLP-1',\n   'MLP-2',\n   'MLP-3',\n   'MLP-4',\n   'MLP-5',\n   'MLP-6',\n   'MLP-7',\n   'MLP-8',\n   'MLP-9'],\n  ['FCN-0',\n   'FCN-1',\n   'FCN-2',\n   'FCN-3',\n   'FCN-4',\n   'FCN-5',\n   'FCN-6',\n   'FCN-7',\n   'FCN-8',\n   'FCN-9'],\n  ['MCDCNN-0',\n   'MCDCNN-1',\n   'MCDCNN-2',\n   'MCDCNN-3',\n   'MCDCNN-4',\n   'MCDCNN-5',\n   'MCDCNN-6',\n   'MCDCNN-7',\n   'MCDCNN-8',\n   'MCDCNN-9'],\n  ['Encoder-0',\n   'Encoder-1',\n   'Encoder-2',\n   'Encoder-3',\n   'Encoder-4',\n   'Encoder-5',\n   'Encoder-6',\n   'Encoder-7',\n   'Encoder-8',\n   'Encoder-9'],\n  ['Resnet-0',\n   'Resnet-1',\n   'Resnet-2',\n   'Resnet-3',\n   'Resnet-4',\n   'Resnet-5',\n   'Resnet-6',\n   'Resnet-7',\n   'Resnet-8',\n   'Resnet-9']],\n 'MLP10': ['MLP-0',\n  'MLP-1',\n  'MLP-2',\n  'MLP-3',\n  'MLP-4',\n  'MLP-5',\n  'MLP-6',\n  'MLP-7',\n  'MLP-8',\n  'MLP-9'],\n 'FCN10': ['FCN-0',\n  'FCN-1',\n  'FCN-2',\n  'FCN-3',\n  'FCN-4',\n  'FCN-5',\n  'FCN-6',\n  'FCN-7',\n  'FCN-8',\n  'FCN-9'],\n 'MCDCNN10': ['MCDCNN-0',\n  'MCDCNN-1',\n  'MCDCNN-2',\n  'MCDCNN-3',\n  'MCDCNN-4',\n  'MCDCNN-5',\n  'MCDCNN-6',\n  'MCDCNN-7',\n  'MCDCNN-8',\n  'MCDCNN-9'],\n 'Encoder10': ['Encoder-0',\n  'Encoder-1',\n  'Encoder-2',\n  'Encoder-3',\n  'Encoder-4',\n  'Encoder-5',\n  'Encoder-6',\n  'Encoder-7',\n  'Encoder-8',\n  'Encoder-9'],\n 'Resnet10': ['Resnet-0',\n  'Resnet-1',\n  'Resnet-2',\n  'Resnet-3',\n  'Resnet-4',\n  'Resnet-5',\n  'Resnet-6',\n  'Resnet-7',\n  'Resnet-8',\n  'Resnet-9'],\n 'NNE': [['Resnet-0',\n   'Resnet-1',\n   'Resnet-2',\n   'Resnet-3',\n   'Resnet-4',\n   'Resnet-5',\n   'Resnet-6',\n   'Resnet-7',\n   'Resnet-8',\n   'Resnet-9'],\n  ['FCN-0',\n   'FCN-1',\n   'FCN-2',\n   'FCN-3',\n   'FCN-4',\n   'FCN-5',\n   'FCN-6',\n   'FCN-7',\n   'FCN-8',\n   'FCN-9'],\n  ['Encoder-0',\n   'Encoder-1',\n   'Encoder-2',\n   'Encoder-3',\n   'Encoder-4',\n   'Encoder-5',\n   'Encoder-6',\n   'Encoder-7',\n   'Encoder-8',\n   'Encoder-9']]}"
+      "text/plain": "{'Best3': [['Resnet-0',\n   'Resnet-1',\n   'Resnet-2',\n   'Resnet-3',\n   'Resnet-4',\n   'Resnet-5',\n   'Resnet-6',\n   'Resnet-7',\n   'Resnet-8',\n   'Resnet-9'],\n  ['MLP-0',\n   'MLP-1',\n   'MLP-2',\n   'MLP-3',\n   'MLP-4',\n   'MLP-5',\n   'MLP-6',\n   'MLP-7',\n   'MLP-8',\n   'MLP-9'],\n  ['Encoder-0',\n   'Encoder-1',\n   'Encoder-2',\n   'Encoder-3',\n   'Encoder-4',\n   'Encoder-5',\n   'Encoder-6',\n   'Encoder-7',\n   'Encoder-8',\n   'Encoder-9']]}"
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "used_ensembles=ensembles\n",
-    "#used_ensembles=keyfilter(lambda ensemble: ensemble in [\"MLP10\"], ensembles)\n",
+    "used_ensembles=keyfilter(lambda ensemble: ensemble in [\"Best3\"], ensembles)\n",
     "used_ensembles"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
-    },
-    "pycharm": {
-     "is_executing": true
     }
    },
    "outputs": [
@@ -119,7 +119,135 @@
      "output_type": "stream",
      "text": [
       "1/9:\tcricket_y\n",
-      "\tAll\n"
+      "\tBest3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/felix/miniconda3/envs/tf/lib/python3.10/site-packages/keras/layers/core/lambda_layer.py:324: UserWarning: ModelBuilder is not loaded, but a Lambda layer uses it. It may cause errors.\n",
+      "  function = cls._parse_function_from_config(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2/9:\tdistal_phalanax_tw\n",
+      "\tBest3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/felix/miniconda3/envs/tf/lib/python3.10/site-packages/keras/layers/core/lambda_layer.py:324: UserWarning: ModelBuilder is not loaded, but a Lambda layer uses it. It may cause errors.\n",
+      "  function = cls._parse_function_from_config(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3/9:\tegg_five_days\n",
+      "\tBest3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/felix/miniconda3/envs/tf/lib/python3.10/site-packages/keras/layers/core/lambda_layer.py:324: UserWarning: ModelBuilder is not loaded, but a Lambda layer uses it. It may cause errors.\n",
+      "  function = cls._parse_function_from_config(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4/9:\tface_ucr\n",
+      "\tBest3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/felix/miniconda3/envs/tf/lib/python3.10/site-packages/keras/layers/core/lambda_layer.py:324: UserWarning: ModelBuilder is not loaded, but a Lambda layer uses it. It may cause errors.\n",
+      "  function = cls._parse_function_from_config(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5/9:\tfifty_words\n",
+      "\tBest3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/felix/miniconda3/envs/tf/lib/python3.10/site-packages/keras/layers/core/lambda_layer.py:324: UserWarning: ModelBuilder is not loaded, but a Lambda layer uses it. It may cause errors.\n",
+      "  function = cls._parse_function_from_config(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6/9:\tmote_strain\n",
+      "\tBest3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/felix/miniconda3/envs/tf/lib/python3.10/site-packages/keras/layers/core/lambda_layer.py:324: UserWarning: ModelBuilder is not loaded, but a Lambda layer uses it. It may cause errors.\n",
+      "  function = cls._parse_function_from_config(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7/9:\tpower_cons\n",
+      "\tBest3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/felix/miniconda3/envs/tf/lib/python3.10/site-packages/keras/layers/core/lambda_layer.py:324: UserWarning: ModelBuilder is not loaded, but a Lambda layer uses it. It may cause errors.\n",
+      "  function = cls._parse_function_from_config(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8/9:\tsony_robot\n",
+      "\tBest3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/felix/miniconda3/envs/tf/lib/python3.10/site-packages/keras/layers/core/lambda_layer.py:324: UserWarning: ModelBuilder is not loaded, but a Lambda layer uses it. It may cause errors.\n",
+      "  function = cls._parse_function_from_config(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9/9:\tsynthetic_control\n",
+      "\tBest3\n"
      ]
     },
     {
