update Readme and analyse data

--- a/notebooks/tanya/analysis_training_res.ipynb
+++ b/notebooks/tanya/analysis_training_res.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "cd34ccc5-530c-4104-867e-cd6b39f33268",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "id": "15cae800-d98f-404e-a4bf-cae28789622a",
    "metadata": {},
    "outputs": [
@@ -22,7 +22,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/scratch/slurm_tmpdir/job_21710641/ipykernel_313554/275281093.py:7: SettingWithCopyWarning: \n",
+      "/scratch/slurm_tmpdir/job_21778843/ipykernel_2505130/1178534097.py:7: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -32,7 +32,7 @@
     }
    ],
    "source": [
-    "path_training_res = \"./../training_res.csv\"\n",
+    "path_training_res = \"./training_res.csv\"\n",
     "df_training_res = pd.read_csv(path_training_res)\n",
     "path_analysis_res = \"./../datasets_analysis/data_dist.csv\"\n",
     "df_analysis_res = pd.read_csv(path_analysis_res)\n",
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "id": "24897eb5-9e4e-44ee-af82-4db68fa7ed7d",
    "metadata": {},
    "outputs": [
@@ -189,7 +189,7 @@
        "[222 rows x 5 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
    "id": "0df01812-3eb5-43c0-aa94-ae687f597e6f",
    "metadata": {},
    "outputs": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 6,
    "id": "91b4fb05-9ea4-4f51-a74c-4be769169d6d",
    "metadata": {},
    "outputs": [],
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 7,
    "id": "0d44e5f6-efa8-4220-a312-e9cf5fcc1fe0",
    "metadata": {},
    "outputs": [],
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 8,
    "id": "3e7e8666-ee61-4a8c-8cdc-0e54f2e44d58",
    "metadata": {},
    "outputs": [
@@ -351,67 +351,67 @@
        "      <th>2</th>\n",
        "      <td>(MLP, FCN)</td>\n",
        "      <td>12</td>\n",
-       "      <td>{fifty_words, power_cons, distal_phalanax_tw, ...</td>\n",
+       "      <td>{fifty_words, face_ucr, egg_five_days, mote_st...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>(MLP, Encoder)</td>\n",
        "      <td>22</td>\n",
-       "      <td>{fifty_words, power_cons, swedish_leaf, cricke...</td>\n",
+       "      <td>{egg_five_days, mote_strain, electric_devices,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>(MLP, Resnet)</td>\n",
        "      <td>12</td>\n",
-       "      <td>{fifty_words, power_cons, medical_images, swed...</td>\n",
+       "      <td>{fifty_words, face_ucr, egg_five_days, mote_st...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>(FCN, Encoder)</td>\n",
        "      <td>16</td>\n",
-       "      <td>{fifty_words, power_cons, distal_phalanx_outli...</td>\n",
+       "      <td>{fifty_words, face_ucr, distal_phalanx_outline...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>(FCN, Resnet)</td>\n",
        "      <td>16</td>\n",
-       "      <td>{fifty_words, power_cons, distal_phalanx_outli...</td>\n",
+       "      <td>{fifty_words, face_ucr, distal_phalanx_outline...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>(Encoder, Resnet)</td>\n",
        "      <td>17</td>\n",
-       "      <td>{fifty_words, power_cons, distal_phalanx_outli...</td>\n",
+       "      <td>{middle_phalanx_correct, fifty_words, face_ucr...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
        "      <td>(MLP, FCN, Encoder)</td>\n",
        "      <td>12</td>\n",
-       "      <td>{fifty_words, power_cons, distal_phalanax_tw, ...</td>\n",
+       "      <td>{fifty_words, face_ucr, egg_five_days, mote_st...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
        "      <td>(MLP, FCN, Resnet)</td>\n",
        "      <td>11</td>\n",
-       "      <td>{fifty_words, power_cons, distal_phalanax_tw, ...</td>\n",
+       "      <td>{fifty_words, face_ucr, egg_five_days, mote_st...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24</th>\n",
        "      <td>(MLP, Encoder, Resnet)</td>\n",
        "      <td>12</td>\n",
-       "      <td>{fifty_words, power_cons, medical_images, swed...</td>\n",
+       "      <td>{fifty_words, face_ucr, egg_five_days, mote_st...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>34</th>\n",
        "      <td>(FCN, Encoder, Resnet)</td>\n",
        "      <td>15</td>\n",
-       "      <td>{fifty_words, power_cons, distal_phalanx_outli...</td>\n",
+       "      <td>{fifty_words, face_ucr, distal_phalanx_outline...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>44</th>\n",
        "      <td>(MLP, FCN, Encoder, Resnet)</td>\n",
        "      <td>11</td>\n",
-       "      <td>{fifty_words, power_cons, distal_phalanax_tw, ...</td>\n",
+       "      <td>{fifty_words, face_ucr, egg_five_days, mote_st...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -432,20 +432,20 @@
        "44  (MLP, FCN, Encoder, Resnet)            11   \n",
        "\n",
        "                                             Datasets  \n",
-       "2   {fifty_words, power_cons, distal_phalanax_tw, ...  \n",
-       "3   {fifty_words, power_cons, swedish_leaf, cricke...  \n",
-       "4   {fifty_words, power_cons, medical_images, swed...  \n",
-       "12  {fifty_words, power_cons, distal_phalanx_outli...  \n",
-       "13  {fifty_words, power_cons, distal_phalanx_outli...  \n",
-       "14  {fifty_words, power_cons, distal_phalanx_outli...  \n",
-       "22  {fifty_words, power_cons, distal_phalanax_tw, ...  \n",
-       "23  {fifty_words, power_cons, distal_phalanax_tw, ...  \n",
-       "24  {fifty_words, power_cons, medical_images, swed...  \n",
-       "34  {fifty_words, power_cons, distal_phalanx_outli...  \n",
-       "44  {fifty_words, power_cons, distal_phalanax_tw, ...  "
+       "2   {fifty_words, face_ucr, egg_five_days, mote_st...  \n",
+       "3   {egg_five_days, mote_strain, electric_devices,...  \n",
+       "4   {fifty_words, face_ucr, egg_five_days, mote_st...  \n",
+       "12  {fifty_words, face_ucr, distal_phalanx_outline...  \n",
+       "13  {fifty_words, face_ucr, distal_phalanx_outline...  \n",
+       "14  {middle_phalanx_correct, fifty_words, face_ucr...  \n",
+       "22  {fifty_words, face_ucr, egg_five_days, mote_st...  \n",
+       "23  {fifty_words, face_ucr, egg_five_days, mote_st...  \n",
+       "24  {fifty_words, face_ucr, egg_five_days, mote_st...  \n",
+       "34  {fifty_words, face_ucr, distal_phalanx_outline...  \n",
+       "44  {fifty_words, face_ucr, egg_five_days, mote_st...  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 9,
    "id": "ba1b191d-af3e-4726-b5b9-60822dc95552",
    "metadata": {},
    "outputs": [
@@ -476,13 +476,42 @@
        " 'synthetic_control'}"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_num_working_ds[\"Datasets\"][44]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "2c9cd229-bbf6-44b4-b468-1de7c3562e51",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fifty_words  \n",
+      "face_ucr  \n",
+      "egg_five_days  \n",
+      "mote_strain  \n",
+      "electric_devices  \n",
+      "cricket_y  \n",
+      "distal_phalanax_tw  \n",
+      "synthetic_control  \n",
+      "swedish_leaf  \n",
+      "sony_robot  \n",
+      "power_cons  \n"
+     ]
+    }
+   ],
+   "source": [
+    "for v in df_num_working_ds[\"Datasets\"][44]:\n",
+    "    print(v, \" \")"
    ]
   },
   {
