--- a/notebooks/EnsembleEvaluation.ipynb
+++ b/notebooks/EnsembleEvaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -33,23 +33,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "['cricket_y',\n 'distal_phalanax_tw',\n 'egg_five_days',\n 'face_ucr',\n 'fifty_words',\n 'mote_strain',\n 'power_cons',\n 'sony_robot',\n 'synthetic_control']"
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dataset_names = [dataset.value for dataset in CurrentDatasets]\n",
     "\n",
@@ -58,207 +49,52 @@
     "\n",
     "ensembles = {\"All\": [[f\"MLP-{number}\" for number in range(0,10)],\n",
     "                     [f\"FCN-{number}\" for number in range(0,10)],\n",
-    "                     [f\"MCDCNN-{number}\" for number in range(0,10)],\n",
-    "                     #[f\"Time-CNN-{number}\" for number in range(0,10)],\n",
+    "                     [f\"MCDCNN_improved-{number}\" for number in range(0,10)],\n",
     "                     [f\"Encoder-{number}\" for number in range(0,10)],\n",
     "                     [f\"Resnet-{number}\" for number in range(0,10)]],\n",
     "             \"MLP10\": [f\"MLP-{number}\" for number in range(0,10)],\n",
     "             \"FCN10\": [f\"FCN-{number}\" for number in range(0,10)],\n",
-    "             \"MCDCNN10\": [f\"MCDCNN-{number}\" for number in range(0,10)],\n",
-    "             #\"Time-CNN10\": [f\"Time-CNN-{number}\" for number in range(0,10)],\n",
+    "             \"MCDCNN_improved10\": [f\"MCDCNN_improved-{number}\" for number in range(0,10)],\n",
     "             \"Encoder10\": [f\"Encoder-{number}\" for number in range(0,10)],\n",
     "             \"Resnet10\": [f\"Resnet-{number}\" for number in range(0,10)],\n",
     "             \"NNE\": [[f\"Resnet-{number}\" for number in range(0,10)],\n",
     "                     [f\"FCN-{number}\" for number in range(0,10)],\n",
     "                     [f\"Encoder-{number}\" for number in range(0,10)]],\n",
-    "             \"Best3\": [[f\"Resnet-{number}\" for number in range(0,10)],\n",
-    "                     [f\"MLP-{number}\" for number in range(0,10)],\n",
-    "                     [f\"Encoder-{number}\" for number in range(0,10)]]}\n",
-    "csv_name = '../results/ensemble_best_3_with_augmentation.csv'\n",
-    "dataset_names = list(filter(lambda n: n not in ['electric_devices', 'swedish_leaf'], dataset_names)) # remove electric devices\n",
+    "             \"Best4\": [[f\"Resnet-{number}\" for number in range(0,10)],\n",
+    "                       [f\"FCN-{number}\" for number in range(0,10)],\n",
+    "                       [f\"MLP-{number}\" for number in range(0,10)],\n",
+    "                       [f\"Encoder-{number}\" for number in range(0,10)]]}\n",
+    "csv_name = '../results/ensembles_without_augmentation.csv'\n",
+    "dataset_names = list(filter(lambda n: n not in [], dataset_names)) # remove electric devices\n",
     "dataset_names"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "{'Best3': [['Resnet-0',\n   'Resnet-1',\n   'Resnet-2',\n   'Resnet-3',\n   'Resnet-4',\n   'Resnet-5',\n   'Resnet-6',\n   'Resnet-7',\n   'Resnet-8',\n   'Resnet-9'],\n  ['MLP-0',\n   'MLP-1',\n   'MLP-2',\n   'MLP-3',\n   'MLP-4',\n   'MLP-5',\n   'MLP-6',\n   'MLP-7',\n   'MLP-8',\n   'MLP-9'],\n  ['Encoder-0',\n   'Encoder-1',\n   'Encoder-2',\n   'Encoder-3',\n   'Encoder-4',\n   'Encoder-5',\n   'Encoder-6',\n   'Encoder-7',\n   'Encoder-8',\n   'Encoder-9']]}"
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "used_ensembles=ensembles\n",
-    "used_ensembles=keyfilter(lambda ensemble: ensemble in [\"Best3\"], ensembles)\n",
+    "#used_ensembles=keyfilter(lambda ensemble: ensemble in [\"MLP10\"], ensembles)\n",
     "used_ensembles"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1/9:\tcricket_y\n",
-      "\tBest3\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/felix/miniconda3/envs/tf/lib/python3.10/site-packages/keras/layers/core/lambda_layer.py:324: UserWarning: ModelBuilder is not loaded, but a Lambda layer uses it. It may cause errors.\n",
-      "  function = cls._parse_function_from_config(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2/9:\tdistal_phalanax_tw\n",
-      "\tBest3\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/felix/miniconda3/envs/tf/lib/python3.10/site-packages/keras/layers/core/lambda_layer.py:324: UserWarning: ModelBuilder is not loaded, but a Lambda layer uses it. It may cause errors.\n",
-      "  function = cls._parse_function_from_config(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3/9:\tegg_five_days\n",
-      "\tBest3\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/felix/miniconda3/envs/tf/lib/python3.10/site-packages/keras/layers/core/lambda_layer.py:324: UserWarning: ModelBuilder is not loaded, but a Lambda layer uses it. It may cause errors.\n",
-      "  function = cls._parse_function_from_config(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4/9:\tface_ucr\n",
-      "\tBest3\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/felix/miniconda3/envs/tf/lib/python3.10/site-packages/keras/layers/core/lambda_layer.py:324: UserWarning: ModelBuilder is not loaded, but a Lambda layer uses it. It may cause errors.\n",
-      "  function = cls._parse_function_from_config(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5/9:\tfifty_words\n",
-      "\tBest3\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/felix/miniconda3/envs/tf/lib/python3.10/site-packages/keras/layers/core/lambda_layer.py:324: UserWarning: ModelBuilder is not loaded, but a Lambda layer uses it. It may cause errors.\n",
-      "  function = cls._parse_function_from_config(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6/9:\tmote_strain\n",
-      "\tBest3\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/felix/miniconda3/envs/tf/lib/python3.10/site-packages/keras/layers/core/lambda_layer.py:324: UserWarning: ModelBuilder is not loaded, but a Lambda layer uses it. It may cause errors.\n",
-      "  function = cls._parse_function_from_config(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7/9:\tpower_cons\n",
-      "\tBest3\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/felix/miniconda3/envs/tf/lib/python3.10/site-packages/keras/layers/core/lambda_layer.py:324: UserWarning: ModelBuilder is not loaded, but a Lambda layer uses it. It may cause errors.\n",
-      "  function = cls._parse_function_from_config(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "8/9:\tsony_robot\n",
-      "\tBest3\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/felix/miniconda3/envs/tf/lib/python3.10/site-packages/keras/layers/core/lambda_layer.py:324: UserWarning: ModelBuilder is not loaded, but a Lambda layer uses it. It may cause errors.\n",
-      "  function = cls._parse_function_from_config(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "9/9:\tsynthetic_control\n",
-      "\tBest3\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/felix/miniconda3/envs/tf/lib/python3.10/site-packages/keras/layers/core/lambda_layer.py:324: UserWarning: ModelBuilder is not loaded, but a Lambda layer uses it. It may cause errors.\n",
-      "  function = cls._parse_function_from_config(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ens_builder = EnsembleBuilder(dataset_names=dataset_names, \n",
     "                              ensembles=used_ensembles, \n",
