fix building of improved MCDCNN

--- a/notebooks/TuneMCDCNNwithsklearn.ipynb
+++ b/notebooks/TuneMCDCNNwithsklearn.ipynb
@@ -10,11 +10,11 @@
    "source": [
     "import numpy as np\n",
     "import skopt\n",
-    "import tensorflow as tf\n",
     "from tensorflow import keras\n",
     "from tqdm.auto import tqdm\n",
     "\n",
     "import src.LoadData as LoadData\n",
+    "import src.ModelBuilder as ModelBuilder\n",
     "import src.TrainProdecure as TrainProdecure"
    ]
   },
@@ -62,77 +62,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [],
-   "source": [
-    "def build_MCDCNN(input_size, output_size,\n",
-    "                 nr_conv_layers=2, nr_conv_filters=8, kernel_size=5, padding_method=\"same\",\n",
-    "                 dense_size=732, nr_dense_layers=1,\n",
-    "                 conv_activation=\"sigmoid\", dense_activation=\"sigmoid\",\n",
-    "                 pooling_method=keras.layers.MaxPool1D, pooling_size=2,\n",
-    "                 dropout_rate=0.5, use_batchnorm=False):\n",
-    "    \"\"\"\n",
-    "    Build a MCDCNN model which architecture is defined by the parameters.\n",
-    "    \"\"\"\n",
-    "    if dropout_rate >= 1:\n",
-    "        raise ValueError(f\"Dropout rate must be between 0 and 1 but is set to {dropout_rate}\")\n",
-    "\n",
-    "    model = keras.Sequential()\n",
-    "    model.add(keras.layers.Input((input_size, 1)))\n",
-    "\n",
-    "    # Convolutional Layers\n",
-    "    for i in range(nr_conv_layers):\n",
-    "        model.add(keras.layers.Conv1D(\n",
-    "            filters=nr_conv_filters,\n",
-    "            kernel_size=(kernel_size,),\n",
-    "            activation=conv_activation,\n",
-    "            input_shape=(input_size, 1),\n",
-    "            padding=padding_method,\n",
-    "            kernel_initializer=tf.keras.initializers.GlorotUniform(),\n",
-    "        ))\n",
-    "\n",
-    "        if use_batchnorm:\n",
-    "            model.add(keras.layers.BatchNormalization())\n",
-    "        if dropout_rate > 0:\n",
-    "            model.add(keras.layers.Dropout(dropout_rate))\n",
-    "\n",
-    "        model.add(\n",
-    "            keras.layers.MaxPooling1D(pool_size=(pooling_size,)) if pooling_method == \"max_pool\"\n",
-    "            else keras.layers.AveragePooling1D(pool_size=(pooling_size,))\n",
-    "        )\n",
-    "\n",
-    "\n",
-    "    # Flatten Layer to feed Dense Layers\n",
-    "    model.add(keras.layers.Flatten())\n",
-    "\n",
-    "    # Dense Layers\n",
-    "    for i in range(nr_dense_layers):\n",
-    "        model.add(keras.layers.Dense(\n",
-    "            dense_size,\n",
-    "            activation=dense_activation,\n",
-    "            kernel_initializer=tf.keras.initializers.GlorotUniform(),\n",
-    "        ))\n",
-    "        if use_batchnorm:\n",
-    "            model.add(keras.layers.BatchNormalization())\n",
-    "        if dropout_rate > 0:\n",
-    "            model.add(keras.layers.Dropout(dropout_rate))\n",
-    "\n",
-    "    # Output Layer\n",
-    "    model.add(keras.layers.Dense(\n",
-    "        output_size,\n",
-    "        activation=\"softmax\",\n",
-    "        kernel_initializer=tf.keras.initializers.GlorotUniform(),\n",
-    "    ))\n",
-    "\n",
-    "    model.compile(loss='sparse_categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
-    "    return model"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "outputs": [],
    "source": [
@@ -165,7 +94,7 @@
     "\n",
     "            input_size = train_x.shape[1]\n",
     "            output_size = len(np.unique(train_y))\n",
-    "            model = build_MCDCNN(input_size, output_size, *config)\n",
+    "            model = ModelBuilder.build_MCDCNN(input_size, output_size, *config)\n",
     "\n",
     "            _, history = TrainProdecure.train_single_model(model, train_x, train_y, epochs=EPOCHS_PER_TRAINING, model_name=f\"{ds_name}_{config_string}\", dataset_name=ds_name)\n",
     "\n",
